ready for deployd

--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body{
     color: white;
     min-height: 100px;
     padding: 5px 16px;
+    text-align: center;
+    line-height: 80px;
+}
+.main-footer{
+    text-align: center;
 }
 .container{
     background: white;
@@ -96,9 +101,4 @@ button{
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-@media screen {
-    
-    
 }
